--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- CSS Link -->
-	<link rel="stylesheet" type="text/css" href=./index.css
-	<!-- Boottrap Link -->
+	<link rel="stylesheet" type="text/css" href=./index.css>
+
+	<!-- Bootdtrap Link -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+	<!-- Google Fonts -->
+	
 	<title>Capstone 1</title>
 </head>
 <body>
@@ -17,9 +20,9 @@
 
 		<!-- Navbar Section -->
 
-		<section>
 
-			<nav id="navbar" class="container-fluid d-flex row sticky-top mx-auto justify-content-center">
+
+			<nav id="navbar" class="container-fluid d-flex row mx-auto justify-content-center sticky-top">
 				<div>
 
 					<div class="p-2">
@@ -47,9 +50,10 @@
 
 				<div>
 
-					<div class="p-2"><div>
-						<a href="#contact">Contact</a>
-					</div>
+					<div class="p-2">
+						<div>
+							<a href="#contact">Contact</a>
+						</div>
 
 				</div>
 			</div>
@@ -57,7 +61,6 @@
 
 
 		</nav>
-	</section>
 	<!-- End of Navbar Section -->
 
 
@@ -119,7 +122,7 @@
 
 	<section>
 
-		<div id="projects" class="container-fluid pt-3">
+		<div id="projects" class="container-fluid pt-3 justify-content-center">
 			<div>
 				<h1 class="text-center">My Projects</h1>
 			</div>
@@ -127,10 +130,10 @@
 
 			<!-- Card 1 -->
 
-			<div class="d-flex container-fluid row mt-5 justify-content-center mx-auto">
+			<div id="cardbig" class="d-flex container-fluid row mt-5 justify-content-center mx-auto">
 
 
-				<div  id="card1" class="card col-md-2 col-12 m-2 ">
+				<div  id="card1" class="card col-md-2 col-12 m-2 bg-warning">
 					<img class="card-img-top pt-3" src="./images/comp-image2.jpg" alt="Card image cap" >
 					<div class="card-body">
 						<h3>Web Page Designing</h3>
@@ -140,7 +143,7 @@
 
 
 				<!-- Card 2 -->
-				<div id="card2" class="card col-md-2 col-12 m-2">
+				<div id="card2" class="card col-md-2 col-12 m-2 bg-warning">
 					<img class="card-img-top pt-3" src="./images/e-commerce1.jpg" alt="Card image cap">
 					<div class="card-body">
 						<h3>E-Commerce</h3>
@@ -151,7 +154,7 @@
 
 
 				<!-- Card 3 -->
-				<div id="card3"class="card col-md-2 col-12 m-2">
+				<div id="card3"class="card col-md-2 col-12 m-2 bg-warning" >
 					<img class="card-img-top pt-3" src="./images/e-commerce2.jpg" alt="Card image cap">
 					<div class="card-body">
 						<h3>E-Commerce API</h3>
@@ -160,20 +163,68 @@
 				</div>
 
 			</div>
+		 
+
+<!-- Projects Small -->
+
+
+<div id="carouselExampleControls" class="carousel slide d-md-none" data-ride="carousel">
+	<div class="carousel-inner">
+		<div class="carousel-item active mx-auto">
+			<div  id="card4" class="card col-md-2 col-12 m-2 bg-warning">
+				<img class="card-img-top pt-3" src="./images/comp-image2.jpg" alt="Card image cap" >
+				<div class="card-body">
+					<h3>Web Page Designing</h3>
+					<p class="card-text">This is a web page created in the bootcamp which focuses on front end designing</p>
+					</div>
+			</div>
 		</div>
+
+<div class="carousel-item mx-auto">
+				<div id="card5" class="card col-md-2 col-12 m-2 bg-warning">
+					<img class="card-img-top pt-3" src="./images/e-commerce1.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h3>E-Commerce</h3>
+						<p class="card-text">This is a web page created in the bootcamp which focuses on backend development</p>
+					</div>
+				</div>
+</div>
+<div class="carousel-item mx-auto">
+<div id="card6"class="card col-md-2 col-12 m-2 bg-warning">
+					<img class="card-img-top pt-3" src="./images/e-commerce2.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h3>E-Commerce API</h3>
+						<p class="card-text">This is a web page created in the bootcamp which focuses on full-stack development</p>
+					</div>
+				</div>
+</div>
+</div>
+<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="sr-only">Next</span>
+</a>
+</div>
+
+
+</div>
+
 
 
 	</section>
 
 	<!-- End of Project Section -->
 
-	<!-- Tools Section -->
+	<!--  Tools Section -->
 
 	<section id="tools" class="container-fluid pt-3">
 
 		<h1 class="text-center">Tools</h1>
 
-		<div id="other-tools" class="d-flex flex-md-column">
+		<div id="tools-logos1" class="d-flex d-md-none">
 			<div id="tools-1" class="d-md-flex flex-row justify-content-center">
 				<img width="150" src="images/logo-mongodb.png"/>
 				<img width="150" src="images/logo-nodejs.png"/>
@@ -190,80 +241,37 @@
 		</div>
 
 
+<!-- Tools Big -->
 
 
-		<!-- Tools big -->
-
-
-<!-- 
-<div id="toolbig" class="container-fluid d-none d-md-row d-flex">
-
-
-<div class="logos">
-<div><img width="150" src="images/logo-mongodb.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-nodejs.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-expressjs.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-react.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-heroku.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-git.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-postman.png"/ class="img-fluid"></div>
-<div><img width="150" src="images/logo-sublime-text-3.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-sublime-text-3.png" class="img-fluid"></div>
-<div><img width="150" src="images/logo-gitlab-ci-cd.png"class="img-fluid"> </div>
-
-</div>
-
-</div>
-
--->
-
-
-<!-- <ul>
-<li>
-<div><img width="150" src="images/logo-mongodb.png" class="img-fluid"></div>
-</li>
-<li>
-<div><img width="150" src="images/logo-nodejs.png" class="img-fluid"></div>
-
-</li>
-<li>
-<div><img width="150" src="images/logo-expressjs.png" class="img-fluid"></div>
-
-</li>
-<li>
-<div><img width="150" src="images/logo-react.png" class="img-fluid"></div>
-
-</li>
-<li>
-<div><img width="150" src="images/logo-heroku.png" class="img-fluid"></div>
-
-</li>
-<li>
-<div><img width="150" src="images/logo-git.png" class="img-fluid"></div>
-
-</li>
-<li>
-<div><img width="150" src="images/logo-sublime-text-3.png" class="img-fluid"></div>
-</li>
-<li>
-<img width="150" src="images/logo-postman.png"/ class="img-fluid">
-
-</li>
-
-<li>
-<div><img width="150" src="images/logo-gitlab-ci-cd.png"class="img-fluid"></div>
-
-</li>
-
-</ul>
-
--->
+	<div id="tools-logos2" class="d-flex">
+			<div  class="d-md-flex flex-row justify-content-center movetools">
+				<img width="150" src="images/logo-mongodb.png"/>
+				<img width="150" src="images/logo-nodejs.png"/>
+				<img width="150" src="images/logo-expressjs.png"/>
+				<img width="150" src="images/logo-react.png"/>
+				<img width="150" src="images/logo-heroku.png"/>
+				<img width="150" src="images/logo-git.png"/>
+				<img width="150" src="images/logo-sublime-text-3.png"/>
+				<img width="150" src="images/logo-postman.png"/>
+				<img width="150" src="images/logo-gitlab-ci-cd.png"/>
+			</div>
+			<div  class="d-md-flex flex-row justify-content-center movetools">
+				<img width="150" src="images/logo-mongodb.png"/>
+				<img width="150" src="images/logo-nodejs.png"/>
+				<img width="150" src="images/logo-expressjs.png"/>
+				<img width="150" src="images/logo-react.png"/>
+				<img width="150" src="images/logo-heroku.png"/>
+				<img width="150" src="images/logo-git.png"/>
+				<img width="150" src="images/logo-sublime-text-3.png"/>
+				<img width="150" src="images/logo-postman.png"/>
+				<img width="150" src="images/logo-gitlab-ci-cd.png"/>
+			</div>
+		</div>
 
 
 
 
-
-</div>
 
 
 </section>
@@ -279,7 +287,7 @@
 		<h1 class="text-center">Contact</h1>
 
 		<div class="row">
-			<div id="contact-us" class="d-flex row col-12 col-md-6 mx-auto container-fluid">
+			<div id="contact-us" class="d-flex row col-12 col-md-6 mx-auto container-fluid border">
 				<div class="w-100">
 				<h2 class="text-center">Contact Us</h2>
 				</div>
@@ -300,25 +308,7 @@
 		</div>
 
 
-		<!-- 	<div>
-						<h2>Contact Us</h2>
-
-					
-
-				</div>
-				<div>
-					<div class=""><a href=""><img src="./images/fb.png" class="img-fluid"></a></div>
-					<div><a href=""><img src="./images/ig.png" class="img-fluid"></div></a>
-				</div>
-				<div>
-					<div><a href=""><img src="./images/git.png" class="img-fluid"></div></a>
-
-				</div>
-
-			</div>
-
-			</div>
- -->
+	
 			<div id="message-us"class="col-12 col-md-6">
 				<h2>Message Us</h2>
 
@@ -328,7 +318,7 @@
 
 						<label for="full-name">Full Name</label>
 
-						<input type="text" class="form-control" id="full-name" aria-describedby="namehelp" placeholder="Enter Name">
+						<input type="text" class="form-control" id="full-name" aria-describedby="namehelp" placeholder="Enter Name" required>
 
 						<small id="namehelp" class="form-text text-muted">We'll never share your name with anyone else.</small>
 
@@ -338,7 +328,7 @@
 
 						<label for="email">Email address</label>
 
-						<input type="email" class="form-control" id="email" aria-describedby="emailhelp" placeholder="Enter email">
+						<input type="email" class="form-control" id="email" aria-describedby="emailhelp" placeholder="Enter email" required>
 
 						<small id="emailhelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 
@@ -349,7 +339,7 @@
 
 						<label for="contact-number">Contact Number</label>
 
-						<input type="text" class="form-control" id="contact-number" aria-describedby="numberhelp" placeholder="Enter Name">
+						<input type="text" class="form-control" id="contact-number" aria-describedby="numberhelp" placeholder="Enter Contact Number" required>
 
 						<small id="numberhelp" class="form-text text-muted">We'll never share your contact number with anyone else.</small>
 
@@ -392,13 +382,6 @@
 </section>
 
 <!-- End of Contact Section -->
-
-
-
-
-
-
-
 
 
 
