--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&family=Merriweather:wght@700&family=Oswald:wght@700&family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:wght@500&family=Style+Script&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
 	
 	<title>Capstone 1</title>
 </head>
@@ -26,7 +30,7 @@
 				<div>
 
 					<div class="p-2">
-						<a href="#landing">About Me</a>
+						<a href="#landing" class="ubuntu-bold">About Me</a>
 					</div>
 
 				</div>
@@ -35,7 +39,7 @@
 				<div >
 
 					<div class="p-2">
-						<a href="#projects">Projects</a>
+						<a href="#projects" class="ubuntu-bold">Projects</a>
 					</div>
 
 				</div>
@@ -43,7 +47,7 @@
 				<div>
 
 					<div class="p-2">
-						<a href="#tools">Tools</a>
+						<a href="#tools" class="ubuntu-bold">Tools</a>
 					</div>
 
 				</div>
@@ -52,7 +56,7 @@
 
 					<div class="p-2">
 						<div>
-							<a href="#contact">Contact</a>
+							<a href="#contact" class="ubuntu-bold">Contact</a>
 						</div>
 
 				</div>
@@ -88,19 +92,19 @@
 					<div>
 
 
-						<h1>Vincent Paul Zapanta (Zig)</h1>
+						<h1 class="crimson-text-semibold-italic">Vincent Paul Zapanta (Zig)</h1>
 
 					</div>
 
 					<div>
 
-						<h3>Full Stack Web Developer</h3>
+						<h3 class="poppins-text">Full Stack Web Developer</h3>
 
 					</div>
 
 					<div>
 
-						<h4>An aspiring Software Developer</h4>
+						<h4 class=".poppins-text-italic">An aspiring Software Developer</h4>
 
 					</div>	
 				</div>
@@ -124,7 +128,7 @@
 
 		<div id="projects" class="container-fluid pt-3 justify-content-center">
 			<div>
-				<h1 class="text-center">My Projects</h1>
+				<h1 class="text-center crimson-text-semibold-italic">My Projects</h1>
 			</div>
 
 
@@ -136,8 +140,8 @@
 				<div  id="card1" class="card col-md-2 col-12 m-2 bg-warning">
 					<img class="card-img-top pt-3" src="./images/comp-image2.jpg" alt="Card image cap" >
 					<div class="card-body">
-						<h3>Web Page Designing</h3>
-						<p class="card-text">This is a web page created in the bootcamp which focuses on front end designing</p>
+						<h3 class="oswald-bold">Web Page Designing</h3>
+						<p class="card-text poppins-regular">This is a web page created in the bootcamp which focuses on front end designing</p>
 					</div>
 				</div>
 
@@ -146,8 +150,8 @@
 				<div id="card2" class="card col-md-2 col-12 m-2 bg-warning">
 					<img class="card-img-top pt-3" src="./images/e-commerce1.jpg" alt="Card image cap">
 					<div class="card-body">
-						<h3>E-Commerce</h3>
-						<p class="card-text">This is a web page created in the bootcamp which focuses on backend development</p>
+						<h3 class="oswald-bold">E-Commerce</h3>
+						<p class="card-text poppins-regular">This is a web page created in the bootcamp which focuses on backend development</p>
 					</div>
 				</div>
 
@@ -157,8 +161,8 @@
 				<div id="card3"class="card col-md-2 col-12 m-2 bg-warning" >
 					<img class="card-img-top pt-3" src="./images/e-commerce2.jpg" alt="Card image cap">
 					<div class="card-body">
-						<h3>E-Commerce API</h3>
-						<p class="card-text">This is a web page created in the bootcamp which focuses on full-stack development</p>
+						<h3 class="oswald-bold">E-Commerce API</h3>
+						<p class="card-text poppins-regular">This is a web page created in the bootcamp which focuses on full-stack development</p>
 					</div>
 				</div>
 
@@ -174,8 +178,8 @@
 			<div  id="card4" class="card col-md-2 col-12 m-2 bg-warning">
 				<img class="card-img-top pt-3" src="./images/comp-image2.jpg" alt="Card image cap" >
 				<div class="card-body">
-					<h3>Web Page Designing</h3>
-					<p class="card-text">This is a web page created in the bootcamp which focuses on front end designing</p>
+					<h3 class="oswald-bold">Web Page Designing</h3>
+					<p class="card-text poppins-regular">This is a web page created in the bootcamp which focuses on front end designing</p>
 					</div>
 			</div>
 		</div>
@@ -184,8 +188,8 @@
 				<div id="card5" class="card col-md-2 col-12 m-2 bg-warning">
 					<img class="card-img-top pt-3" src="./images/e-commerce1.jpg" alt="Card image cap">
 					<div class="card-body">
-						<h3>E-Commerce</h3>
-						<p class="card-text">This is a web page created in the bootcamp which focuses on backend development</p>
+						<h3 class="oswald-bold">E-Commerce</h3>
+						<p class="card-text poppins-regular">This is a web page created in the bootcamp which focuses on backend development</p>
 					</div>
 				</div>
 </div>
@@ -193,8 +197,8 @@
 <div id="card6"class="card col-md-2 col-12 m-2 bg-warning">
 					<img class="card-img-top pt-3" src="./images/e-commerce2.jpg" alt="Card image cap">
 					<div class="card-body">
-						<h3>E-Commerce API</h3>
-						<p class="card-text">This is a web page created in the bootcamp which focuses on full-stack development</p>
+						<h3 class="oswald-bold" >E-Commerce API</h3>
+						<p class="card-text poppins-regular">This is a web page created in the bootcamp which focuses on full-stack development</p>
 					</div>
 				</div>
 </div>
@@ -222,7 +226,7 @@
 
 	<section id="tools" class="container-fluid pt-3">
 
-		<h1 class="text-center">Tools</h1>
+		<h1 class="text-center crimson-text-semibold-italic">Tools</h1>
 
 		<div id="tools-logos1" class="d-flex d-md-none">
 			<div id="tools-1" class="d-md-flex flex-row justify-content-center">
@@ -284,12 +288,12 @@
 
 
 	<div id="contact" class="pt-3 container-fluid">
-		<h1 class="text-center">Contact</h1>
+		<h1 class="text-center crimson-text-semibold-italic">Contact</h1>
 
 		<div class="row">
 			<div id="contact-us" class="d-flex row col-12 col-md-6 mx-auto container-fluid border">
 				<div class="w-100">
-				<h2 class="text-center">Contact Us</h2>
+				<h2 class="text-center ubuntu-bold">Contact Us</h2>
 				</div>
 				<div class=" w-100">
 					<div class="justify-content-center d-flex row  p-3">
@@ -310,13 +314,13 @@
 
 	
 			<div id="message-us"class="col-12 col-md-6">
-				<h2>Message Us</h2>
+				<h2 class="ubuntu-bold">Message Us</h2>
 
 				<form id="messageform">
 
 					<div class="form-group">
 
-						<label for="full-name">Full Name</label>
+						<label for="full-name" class="roboto-mono-medium">Full Name</label>
 
 						<input type="text" class="form-control" id="full-name" aria-describedby="namehelp" placeholder="Enter Name" required>
 
@@ -326,7 +330,7 @@
 
 					<div class="form-group">
 
-						<label for="email">Email address</label>
+						<label for="email" class="roboto-mono-medium">Email address</label>
 
 						<input type="email" class="form-control" id="email" aria-describedby="emailhelp" placeholder="Enter email" required>
 
@@ -337,7 +341,7 @@
 
 					<div>
 
-						<label for="contact-number">Contact Number</label>
+						<label for="contact-number" class="roboto-mono-medium">Contact Number</label>
 
 						<input type="text" class="form-control" id="contact-number" aria-describedby="numberhelp" placeholder="Enter Contact Number" required>
 
@@ -349,7 +353,7 @@
 
 						<div>
 
-							<label for="message">Message:</label>
+							<label for="message" class="roboto-mono-medium">Message:</label>
 
 						</div>
 
@@ -363,11 +367,11 @@
 
 						<input type="checkbox" class="form-check-input" id="exampleCheck1">
 
-						<label class="form-check-label" for="exampleCheck1">Check me out</label>
+						<label class="form-check-label roboto-mono-medium" for="exampleCheck1">Check me out</label>
 
 					</div>
 
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary ubuntu-bold">Submit</button>
 				</form>
 
 			</div>
