Edit capstone 1 image tag

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 
-					<img id="my-image" src="./images/me.jpg" class="img-fluid rounded-circle">
+					<img id="my-image" src="./images/Me.jpg" class="img-fluid rounded-circle">
 
 
 				</div>
